feat(wrestler): Update wrestler image handling and enhance segment queries for pagination