@@ -61,10 +61,8 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import lombok.Getter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -75,16 +73,7 @@ import org.springframework.transaction.annotation.Transactional;
 @PermitAll
 public class WrestlerProfileView extends Main implements BeforeEnterObserver {
 
-  @Getter
-  private static class FeudHistoryItem {
-    private final String name;
-    private final int heat;
-
-    public FeudHistoryItem(String name, int heat) {
-      this.name = name;
-      this.heat = heat;
-    }
-  }
+  private record FeudHistoryItem(String name, int heat) {}
 
   private final WrestlerService wrestlerService;
   private final WrestlerRepository wrestlerRepository;
@@ -110,7 +99,6 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
   private final Grid<Segment> recentMatchesGrid = new Grid<>(Segment.class);
   private final HorizontalLayout header;
   private final Image wrestlerImage = new Image();
-  private final VerticalLayout nameDetailsAndStatsLayout = new VerticalLayout();
 
   @Autowired private SecurityUtils securityUtils;
 
@@ -151,6 +139,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
         new ViewToolbar(
             "Wrestler Profile", new RouterLink("Back to List", WrestlerListView.class)));
 
+    VerticalLayout nameDetailsAndStatsLayout = new VerticalLayout();
     nameDetailsAndStatsLayout.add(wrestlerName, wrestlerDetails, statsLayout);
     header = new HorizontalLayout(wrestlerImage, nameDetailsAndStatsLayout);
     header.setAlignItems(Alignment.CENTER);
@@ -168,8 +157,9 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
           selectedSeason = event.getValue();
           updateMatchAndFeudHistory();
         });
-    seasonFilter.setValue(
-        seasons.isEmpty() ? null : seasons.get(seasons.size() - 1)); // Default to latest season
+    if (!seasons.isEmpty()) {
+      seasonFilter.setValue(seasons.getLast()); // Default to latest season
+    }
 
     recentMatchesGrid.removeAllColumns();
     recentMatchesGrid.addColumn(segment -> segment.getShow().getName()).setHeader("Show");
@@ -288,10 +278,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       if (titlesWon.isEmpty()) {
         careerHighlightsLayout.add(new Paragraph("No titles won yet."));
       } else {
-        titlesWon.forEach(
-            title -> {
-              careerHighlightsLayout.add(new Paragraph(title.getName()));
-            });
+        titlesWon.forEach(title -> careerHighlightsLayout.add(new Paragraph(title.getName())));
       }
 
       // Bumps and Injuries
@@ -303,10 +290,7 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
       } else {
         wrestler
             .getInjuries()
-            .forEach(
-                injury -> {
-                  injuriesLayout.add(new Paragraph("- " + injury.getDisplayString()));
-                });
+            .forEach(injury -> injuriesLayout.add(new Paragraph("- " + injury.getDisplayString())));
       }
 
       updateMatchAndFeudHistory(); // Initial call to populate match and feud history
@@ -328,17 +312,18 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
 
     recentMatchesGrid.setDataProvider(
         DataProvider.fromCallbacks(
-            query -> {
-              Page<Segment> page =
-                  segmentService.getSegmentsByWrestlerParticipation(
-                      wrestler,
-                      PageRequest.of(
-                          query.getPage(),
-                          query.getPageSize(),
-                          Sort.by("segmentDate").descending()));
-              return page.stream();
-            },
-            query -> (int) segmentService.countSegmentsByWrestler(wrestler)));
+            query ->
+                segmentService
+                    .getSegmentsByWrestlerParticipationAndSeason(
+                        wrestler,
+                        selectedSeason,
+                        PageRequest.of(
+                            query.getPage(),
+                            query.getPageSize(),
+                            Sort.by("segmentDate").descending()))
+                    .stream(),
+            query ->
+                (int) segmentService.countSegmentsByWrestlerAndSeason(wrestler, selectedSeason)));
 
     // Feud History
     feudHistoryLayout.add(new H3("Feud History"));
@@ -363,11 +348,11 @@ public class WrestlerProfileView extends Main implements BeforeEnterObserver {
     if (feudHistoryItems.isEmpty()) {
       feudHistoryLayout.add(new Paragraph("No active feuds or rivalries found."));
     } else {
-      feudHistoryItems.sort(Comparator.comparingInt(FeudHistoryItem::getHeat).reversed());
+      feudHistoryItems.sort(Comparator.comparingInt(FeudHistoryItem::heat).reversed());
       feudHistoryItems.forEach(
           item ->
               feudHistoryLayout.add(
-                  new Paragraph(String.format("%s (Heat: %d)", item.getName(), item.getHeat()))));
+                  new Paragraph(String.format("%s (Heat: %d)", item.name(), item.heat()))));
     }
   }
 }
